[gd_scene load_steps=9 format=2]

[ext_resource path="res://Master_Sprite3_-_4_tanner.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 112, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 128, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.1108, 5.60638 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0.420448, -0.315336 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "walking"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.519664, 0.460668 )
shape = SubResource( 6 )

[node name="TopRayCast" type="RayCast2D" parent="."]
position = Vector2( -0.404984, -4.99818 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 1 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2( -5.66325, -0.23597 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2( 5.07333, -0.118015 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 1 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
